--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="close">Close Navigation Drawer</string>
     <string name="profile">Profile</string>
     <string name="new_user_register_now">New User? &#160;<b>Register now</b> </string>
+    <string name="already_a_user_login">Already a User? &#160;<b>Login</b> </string>
 </resources>
