--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="profile">Profile</string>
     <string name="new_user_register_now">New User? &#160;<b>Register now</b> </string>
     <string name="already_a_user_login">Already a User? &#160;<b>Login</b> </string>
+    <string name="otp_not_received">Didn\'t receive OTP? &#160;<b>Resend</b> </string>
 </resources>
